feat(ticket-rest): add update ticket endpoint
